finished the site

--- a/starter-code/about.html
+++ b/starter-code/about.html
@@ -39,14 +39,12 @@
     <div class="row py-5">
 
       <div class="col-12 col-lg-4">
-        <h2>Our Vision</h2>
+        <h2>Our Company</h2>
       </div>
   
       <div class="col-12 col-lg-8">
-        <p>Our main goal is to build beautiful consumer experiences along with developer-friendly 
-          infrastructure. The result is an intelligent tool that gives everyone the ability to create 
-          amazing products that solve big problems. We are deeply focused on democratizing financial 
-          services through technology.</p>
+        <p>EKAMAL Technologies was founded to strategically support the productivity within the Saudi  Arabian energy sector by providing new innovative products and supplying the market with the  latest Drilling & Oilfield equipment and other mechanical products. Our focus is on providing  equipment, that satisfy the local demand in the Upstream and downstream sector, through a  global supply network of innovation-driven partners. 
+        </p>
       </div>
   
     </div>
@@ -54,13 +52,12 @@
     <div class="row py-3">
 
       <div class="col-12 col-lg-4">
-        <h2>Our Business</h2>
+        <h2>Our Strategy</h2>
       </div>
   
       <div class="col-12 col-lg-8">
-        <p>At the core of our platform is the technical infrastructure APIs that connect consumers. 
-          Our innovative product provides key insights for businesses and individuals, as well as 
-          robust reporting for traditional financial institutions and developers.</p>
+        <p>We focus on Sourcing & Offering Equipment from API certified manufacturers; this is a core function in our process. American Petroleum Institute, API, with their certification processes,  determines if the manufacturer has the capability to produce products that consistently conform  to the standards & specifications required in the Oil & Gas industry. 
+        </p>
       </div>
     </div>
   </div>
@@ -99,7 +96,11 @@
       </div>
     </div>
   </div>
-  
+
+  <div class="buffer3">
+     
+  </div>
+
   <div class="container-fluid pt-5">
     <div class="row d-flex justify-content-around">
       <div class="col-12 col-lg-8 text-center mt-3">
