--- a/starter-code/contact.html
+++ b/starter-code/contact.html
@@ -83,10 +83,11 @@
               <!-- <h5 class="text-uppercase">Footer Content</h5> -->
               <img src="./assets/shared/desktop/logo.svg" alt="logo" width="200">
   
-              <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste atque ea quis
-                molestias. Fugiat pariatur maxime quis culpa corporis vitae repudiandae aliquam
-                voluptatem veniam, est atque cumque eum delectus sint!
+              <p> 
+                EKAMAL Technologies Commercial Services Co., Ltd.<br>
+                4615 Khalid Bin Waleed Street, Al-Rakah, <br>
+                Al-Khobar 34226 - 8011 <br>
+                Saudi Arabia <br>                
               </p>
             </div>
             <!--Grid column-->
@@ -111,17 +112,17 @@
       
             <!--Grid column-->
             <div class="col-lg-3 col-md-6 mb-4 mb-md-0 footer-d">
-              <h5 class="text-uppercase mb-0">Links</h5>
+              <h5 class="text-uppercase mb-0">Contact info</h5>
       
               <ul class="list-unstyled">
                 <li>
-                  <a href="#!" class="text-white">Career</a>
+                  <p> Tel: +966 13 898 2323</p>
                 </li>
                 <li>
-                  <a href="#!" class="text-white">Blog</a>
+                  <p>Fax: +966 13 864 2298</p>
                 </li>
                 <li>
-                  <a href="#!" class="text-white">Contact Us</a>
+                  <p>Email: info@ekamal-technology.com</p>
                 </li>
               </ul>
             </div>
