finished the site

--- a/starter-code/contact.html
+++ b/starter-code/contact.html
@@ -13,7 +13,7 @@
   <body>
      <!-- this is the navbar -->
      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="#"><img src="assets/shared/desktop/logo.svg" alt="logo"></a>
+      <a class="navbar-brand" href="index.html"><img src="assets/shared/desktop/logo.svg" alt="logo"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -83,11 +83,10 @@
               <!-- <h5 class="text-uppercase">Footer Content</h5> -->
               <img src="./assets/shared/desktop/logo.svg" alt="logo" width="200">
   
-              <p> 
-                EKAMAL Technologies Commercial Services Co., Ltd.<br>
-                4615 Khalid Bin Waleed Street, Al-Rakah, <br>
-                Al-Khobar 34226 - 8011 <br>
-                Saudi Arabia <br>                
+              <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste atque ea quis
+                molestias. Fugiat pariatur maxime quis culpa corporis vitae repudiandae aliquam
+                voluptatem veniam, est atque cumque eum delectus sint!
               </p>
             </div>
             <!--Grid column-->
@@ -112,17 +111,17 @@
       
             <!--Grid column-->
             <div class="col-lg-3 col-md-6 mb-4 mb-md-0 footer-d">
-              <h5 class="text-uppercase mb-0">Contact info</h5>
+              <h5 class="text-uppercase mb-0">Links</h5>
       
               <ul class="list-unstyled">
                 <li>
-                  <p> Tel: +966 13 898 2323</p>
+                  <a href="#!" class="text-white">Career</a>
                 </li>
                 <li>
-                  <p>Fax: +966 13 864 2298</p>
+                  <a href="#!" class="text-white">Blog</a>
                 </li>
                 <li>
-                  <p>Email: info@ekamal-technology.com</p>
+                  <a href="#!" class="text-white">Contact Us</a>
                 </li>
               </ul>
             </div>
