--- a/starter-code/about.html
+++ b/starter-code/about.html
@@ -106,15 +106,11 @@
         <h4 style="font-size: 50px; color:#36536B;" class="ready">Ready to start? </h4>
       </div>
   
-      <div class="col-12 col-lg-4 text-center ready-input">
-        <form style="max-width:400px;">
-          <div class="form-group">
-            <label for="exampleInputEmail1"></label>
-            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email address ">
-            <!-- <small id="emailHelp" class="form-text text-muted">Have any questions? <strong>Contact Us</strong></small> -->
-          </div>
-          <button type="submit" class="btn btn-danger rounded-pill footer-btn ready-button">Schedule a Demo</button>
-        </form>
+      <div class="input-group mb-3 banner-btn">
+        <input type="email" class="form-control" placeholder="Enter email" aria-label="Recipient's username" aria-describedby="basic-addon2">
+        <div class="input-group-append">
+          <button class="btn btn-danger" type="button">Send</button>
+        </div>
       </div>
   
     </div>
