--- a/starter-code/contact.html
+++ b/starter-code/contact.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="./Stylesheet/contact.css">
-    <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png" />
 
     <title>Contact Us</title>
   </head>
@@ -41,7 +40,7 @@
     <div class="row">
   
       <div class="col-12 col-lg-8">
-        <form action="#">
+        <form action="#" style="background-color: white; border-radius: 10px; padding: 10px; box-shadow: 0 0 15px rgba(0,0,0,0.2);">
           <div class="form-group col-lg-4">
             <label for="Name"></label>
             <input type="text" placeholder="Name" class="form-control ">
@@ -53,8 +52,8 @@
           <div class="form-group col-lg-4">
             <label for="company name"></label>
             <input type="text" placeholder="Company Name" class="form-control">
+            <button type="submit" class="btn btn-primary my-3">Send</button>
           </div>
-          <button type="submit" class="btn btn-primary my-3">Send</button>
         </form>
       </div>
   
